// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays error if invalid & touched 1`] = `
.c0 {
  border: 1px solid #ea232d;
  background: no-repeat 97% url(test-file-stub);
  background-color: #ffe7ec;
  display: block;
  background-size: 15px 15px;
  outline: none;
  width: 100%;
  margin-bottom: 20px;
  padding: 0.65em;
}

<input
  className="c0"
  name="foo"
/>
`;

exports[`displays neutral state if not touched: no error 1`] = `
.c0 {
  border: 1px solid #d9d9d9;
  background-color: white;
  display: block;
  background-size: 15px 15px;
  outline: none;
  width: 100%;
  margin-bottom: 20px;
  padding: 0.65em;
}

<input
  className="c0"
  name="foo"
/>
`;

exports[`displays neutral state if not touched: with error 1`] = `
.c0 {
  border: 1px solid #d9d9d9;
  background-color: white;
  display: block;
  background-size: 15px 15px;
  outline: none;
  width: 100%;
  margin-bottom: 20px;
  padding: 0.65em;
}

<input
  className="c0"
  name="foo"
/>
`;

exports[`displays success if valid & touched 1`] = `
.c0 {
  border: 1px solid #62b33c;
  background: no-repeat 97% url(test-file-stub);
  background-color: #e6f8e7;
  display: block;
  background-size: 15px 15px;
  outline: none;
  width: 100%;
  margin-bottom: 20px;
  padding: 0.65em;
}

<input
  className="c0"
  name="foo"
/>
`;
